# pinax

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/data/: 69909009 Test Data.csv
examples/data/69909009 Test Data Folder/: 69909009 Test Data.tdms
notebooks/: collab1.ipynb  playground.ipynb  sample_data_generation.ipynb
src/pinax/: __init__.py  utils.py
src/pinax/amtl_tools/: __init__.py  tdms_tools.py  vehicle_tools.py  vspy_tools.py
tests/: test_amtl_tools.py  test_basic.py
tools/: repo_utils.py
